updates by Marvin